// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legend As Heading 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend id="<removed>">
    <h2 data-size="sm">
      Hvilke tjenester bruker du?
    </h2>
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Påloggingssystemer hos Udir
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="checkbox"
      value="feide"
      name="components-fieldset--legend-as-heading-feide"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Feide
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="checkbox"
      value="UIDP"
      name="components-fieldset--legend-as-heading-UIDP"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      UIDP
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="checkbox"
      value="UBAS"
      name="components-fieldset--legend-as-heading-UBAS"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      UBAS
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend id="<removed>">
    Hvilken fjordarm bor du ved?
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Valget vil hjelpe oss å forbedre innholdet vi viser deg.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="barsnesfjorden"
      name="radio"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Barsnesfjorden
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="eidsfjorden"
      name="radio"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Eidsfjorden
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="radio"
      value="ingen-av-dem"
      name="radio"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Ingen av dem
    </label>
  </ds-field>
</fieldset>
`;

exports[`With Checkbox 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend id="<removed>">
    Godtar du vilkårene?
  </legend>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="checkbox"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Ja, jeg godtar
    </label>
  </ds-field>
</fieldset>
`;

exports[`With Textfield 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend id="<removed>">
    <h2 data-size="sm">
      Adresse
    </h2>
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    Skriv inn adressen din for å motta post fra oss.
  </p>
  <ds-field>
    <label for="<removed>">
      Gateadresse
    </label>
    <div>
      <input
        autocomplete="address-line1"
        type="text"
        name="components-fieldset--with-textfield-address-line1"
        id="<removed>"
      >
    </div>
  </ds-field>
  <ds-field>
    <label for="<removed>">
      Postnummer
    </label>
    <div>
      <input
        inputmode="numeric"
        maxlength="4"
        size="4"
        autocomplete="postal-code"
        type="text"
        name="components-fieldset--with-textfield-postal-code"
        id="<removed>"
      >
    </div>
  </ds-field>
  <ds-field>
    <label for="<removed>">
      Poststed
    </label>
    <div>
      <input
        size="25"
        autocomplete="address-level2"
        type="text"
        name="components-fieldset--with-textfield-address-level2"
        id="<removed>"
      >
    </div>
  </ds-field>
</fieldset>
`;
